# fnirs_stroke_resting_state

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  脑卒中患者康复评估数据-分组对比.xlsx  量表最终原始数据2.xlsx
code/: master_analysis.py
code/0_data_prep/: bids_setup.py  build_subject_master.py  hemisphere_flip.py
code/0_data_preprocessing/: batch_convert_nirs2snirf.py  ceate_deritives_structure.m  check_snirf_durations.m  create_participants_tsv.py  create_structure.py  fNIRS_preprocessing_pipeline.md  rename_MTPG_MtPg.py  rename_sub.py
code/1_clinical/: factorial_anova.py
code/2_preprocessing/: preprocess_resting.py  qc_metrics.py
code/4_task_state/: task_glm.py
code/utils/: __init__.py  fnirs_loader.py  inventory.py  nirs2snirf.py
dataset/: participants.tsv
docs/notes/: fnirs-analysis-discussion-2026-07-09.md
output/processed/: analysis_params.json  bids_manifest.csv  bids_subject_mapping.csv  clinical_full.csv  clinical_fx.csv  clinical_rest.csv  clinical_summary.csv  preprocessing_metadata.csv  resting_metadata.csv  subject_inventory.csv  task_glm_metadata.csv
output/tables/: anova_all.csv  anova_factorial_2x2.csv  simple_effects.csv  tukey_arat.csv  tukey_fma_distal.csv
pheno/: participants.json  participants.tsv
submission/submission/: README.md  manuscript.docx  manuscript_revised.md  manuscript_revision.md
submission/submission/figures_new/: MirrorTherapy_DataManifest.html  MirrorTherapy_FinalReport.html  (+3 more)
tool-audit/: .gitignore  README.md
tool-audit/notes/: cedalion.md  matlab-tools-summary.md  mne-nirs.md
